2007-05-08  Raja R Harinath  <rharinath@novell.com>

	Avoid unnecessary allocation on indexer access
	* SortedDictionary.cs (NodeHelper): Rename from NodeComparer.
	(NodeHelper.CreateNode): New.
	(Item.set): Move responsibility of creating new nodes to
	RBTree.Intern.
	* RBTree.cs (INodeHelper): Rename from INodeComparer.
	(INodeHelper.CreateNode): New.
	(Intern): Use it to create a new node if no node is passed in.

2007-05-08 Igor Zelmanovich <igorz@mainsoft.com>

	* RBTree.cs: for TARGET_JVM used Thread Local Storage 
	istead Thread-Relative Static Fields 

2007-05-02  Raja R Harinath  <rharinath@novell.com>

	* RBTree.cs (Enumerator.Current): Remove nullref.

	* SortedDictionary.cs (ICollection.Contains): Use EqualityComparer
	for comparing the value field.

	* RBTree.cs (do_remove): Remove some redundant assignments/checks.
	(NodeEnumerator): Simplify.  Keep track of a list of
	right-pennants that need to be traversed next, rather than
	comparing parent pointers.

2007-05-02  Raja R Harinath  <harinath@gmail.com>

	Make add and remove operations O(log n).
	* SortedDictionary.cs: Rewrite to use the red-black tree
	implementation from RBTree.cs.
	* RBTree.cs: Some more refactoring.  Rename Insert() to Intern(),
	and modify semantics slightly.  Replace Contains() with Lookup().

2007-04-30  Raja R Harinath  <rharinath@novell.com>

	* RBTree.cs: Refactor to reduce generics code.

2007-04-30  Raja R Harinath  <harinath@gmail.com>

	* RBTree.cs: New red-black tree implementation for use with
	SortedDictionary.

2007-04-19  Gert Driesen  <drieseng@users.sourceforge.net>

	* Queue.cs: Fixed binary serialization, based on patch provided by
	Lionel Cuir. Fixes TrimExcess to use SetCapacity, before it was not 
	updating _head which could lead to IndexOutOfRangeException.
	* Stack.cs: Fixed binary serialization, based on patch provided by
	Lionel Cuir. In Pop, clear entry from array to help GC.

2007-03-27  Alan McGovern <alan.mcgovern@gmail.com>
