@@ -1,3 +1,7 @@
+2007-08-20  Jb Evain  <jbevain@novell.com>
+
+	* SortedListTest.cs: Tests for #82492.
+
 2007-05-02  Raja R Harinath  <harinath@gmail.com>
 
 	* SortedDictionaryTest.cs (AddNullKeyNullable): Enable.
